Add internal preview of Babis's promises

--- a/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
+++ b/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
@@ -1,3 +1,10 @@
-<% content_for(:title, "Sliby druhé vlády Andreje Babiše (2018—)") %>
+<% content_for(:title, "Sliby vlády Andreje Babiše") %>
 
-<h1>Sliby druhé vlády Andreje Babiše (2018—)</h1>
+<img class="promises-logo" src="<%= asset_path("vladni-sliby-logo.svg") %>" alt="Logo projektu Vládní sliby">
+
+<h1>Sliby vlády Andreje Babiše</h1>
+<p><strong>Speciální výstup Demagog.cz sledující plnění slibů druhé vlády Andreje Babiše</strong></p>
+
+<p>Sem přijde krátký úvodní text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus nibh odio, quis dapibus dolor fringilla at. Donec a ornare metus, eget condimentum neque. Sed nec enim sit amet ex bibendum rhoncus. Vivamus sit amet ornare urna, ac viverra velit. Nullam bibendum, tellus sed laoreet imperdiet, metus mauris feugiat turpis, et ornare magna nisi luctus tellus.</p>
+
+<p>Maecenas volutpat id tortor eget pharetra. Pellentesque efficitur lacus enim, et mollis odio suscipit sed. Duis lobortis lectus vitae maximus feugiat. Nunc ipsum mi, posuere ut nisi id, gravida venenatis nulla. Nam fermentum ultricies eros nec gravida. Fusce commodo arcu vulputate aliquam vehicula. Phasellus non hendrerit elit. Duis pellentesque dolor quis magna porttitor, nec hendrerit quam sodales. Nunc facilisis nisl ac urna blandit consectetur et vel magna. Sed tristique egestas massa.</p>
