--- a/app/views/promises/_sobotkova_vlada_intro.html.erb
+++ b/app/views/promises/_sobotkova_vlada_intro.html.erb
@@ -1,6 +1,7 @@
 <% content_for(:title, "Sliby Sobotkovy vlády (2014—2017)") %>
 
 <h1>Sliby Sobotkovy vlády (2014—2017)</h1>
+<p><strong>Speciální výstup Demagog.cz sledující plnění slibů vlády Bohuslava Sobotky</strong></p>
 <p>
   S končícím volebním obdobím zpracoval Demagog.cz unikátní analýzu,
   nakolik koalice ČSSD, hnutí ANO a KDU-ČSL splnila závazky, které
