--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -7,10 +7,14 @@
   ),
   Struct::Submenu.new(
     'Speciály',
-    [
-      Struct::Link.new('Vládní sliby 2014—17', '/sliby/sobotkova-vlada'),
-      Struct::Link.new('Sliby Miloše Zemana', 'https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/')
-    ]
+    (
+      # Preview only for users signed in to admin. Change when launching.
+      (user_signed_in? ? [Struct::Link.new('Sliby vlády Andreje Babiše', '/sliby/druha-vlada-andreje-babise')] : []) +
+      [
+        Struct::Link.new('Sliby Sobotkovy vlády', '/sliby/sobotkova-vlada'),
+        Struct::Link.new('Sliby Miloše Zemana', 'https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/')
+      ]
+    )
   ),
   Struct::Submenu.new(
     "O nás",
