--- a/app/assets/stylesheets/promises/overview.scss
+++ b/app/assets/stylesheets/promises/overview.scss
@@ -4,8 +4,16 @@
   flex-wrap: wrap;
 
   .intro {
+    .promises-logo {
+      margin-bottom: 10px;
+    }
+
     @media (max-width: 899.9px) {
       flex: 1 0 100%;
+
+      .promises-logo {
+        max-width: 80%;
+      }
     }
 
     @media (min-width: 900px) {
@@ -64,6 +72,9 @@
           &.broken .stats-line-bar-inner {
             background-color: var(--untrue);
           }
+          &.stalled .stats-line-bar-inner {
+            background-color: var(--misleading);
+          }
 
           .stats-line-bar-label {
             position: absolute;
@@ -106,7 +117,6 @@
     }
 
     .area-filter, .evaluation-filter {
-      flex: 1 0 265px;
       margin-bottom: 30px;
 
       .filter-options-list {
@@ -134,6 +144,7 @@
     }
 
     .area-filter {
+      flex: 1 0 265px;
       margin-right: 30px;
 
       .filter-options-list {
@@ -144,6 +155,8 @@
     }
 
     .evaluation-filter {
+      flex: 1 0 300px;
+
       .filter-options-list {
         .filter-option-button {
           padding: 9px 15px 7px;
@@ -334,7 +347,7 @@
     align-items: flex-start;
 
     blockquote.content {
-      flex: 1 1 400px;
+      flex: 2 2 200px;
       margin: 0 0 20px 0;
 
       border: 1px solid #CAD9E6;
@@ -362,7 +375,7 @@
     }
 
     .assessment {
-      flex: 1 1 400px;
+      flex: 3 3 300px;
       margin-left: 30px;
       align-items: flex-start;
 
@@ -495,6 +508,21 @@
 
       &.size-24::before {
         background-size: 10px 9px;
+      }
+    }
+
+    &.stalled {
+      color: var(--misleading);
+
+      &:before {
+        background-color: var(--misleading);
+        background-image: image-url('unverifiable-symbol.svg');
+        background-position: 55% 50%;
+        background-size: 6px;
+      }
+
+      &.size-24::before {
+        background-size: 7px;
       }
     }
   }
