--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -8,7 +8,7 @@
     <% if @article_type == "factcheck" && @article.source %>
       <p class="lead">
         <span class="label factcheck">Ověřili jsme</span><br>
-        <%= @article.source.medium.name %> ze dne <%= raw(l(@article.source.released_at, format: :long)) %>
+        <%= @article.source.medium.name %> ze dne <%= raw(l(@article.source.released_at, format: :long, locale: :cs)) %>
         <% if @article.source.media_personalities.size > 0 %>
           (<%= @article.source.media_personalities.size > 1 ? "moderátoři" : "moderátor" %> <%= @article.source.media_personalities.pluck(:name).to_sentence %><% unless @article.source.source_url.empty? %>, <a class="ext" href="<%= @article.source.source_url %>">záznam</a><% end %>)
         <% end %>
@@ -17,7 +17,7 @@
 
     <% if @article_type == "editorial" %>
       <p>
-        <span class="label editorial">Komentář</span> <i><%= raw(l(@article.published_at, format: :long)) %></i>
+        <span class="label editorial">Komentář</span> <i><%= raw(l(@article.published_at, format: :long, locale: :cs)) %></i>
       </p>
     <% end %>
   </section>
