Fix promise citation line height

--- a/app/assets/stylesheets/promises/overview.scss
+++ b/app/assets/stylesheets/promises/overview.scss
@@ -352,12 +352,13 @@
       padding: 10px 15px 15px 15px;
 
       p {
-        margin-bottom: 5px;
+        margin-bottom: 7px;
       }
 
       cite {
         text-align: right;
         color: #9a91b5;
+        line-height: 1.25;
 
         a {
           color: #9a91b5;
