--- a/app/views/homepage/_cover_story.html.erb
+++ b/app/views/homepage/_cover_story.html.erb
@@ -24,7 +24,7 @@
             partial: "shared/speaker_stat",
             locals: {
               speaker: speaker,
-              stats: controller.article_stats.build(@cover_story, speaker),
+              stats: @cover_story.speaker_stats(speaker),
               lazy_load_images: false
             })
           %>
