Promises overview: narrower promise title column

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -107,8 +107,8 @@
       <thead>
         <tr>
           <th></th>
-          <th style="width: 140px">Oblast</th>
-          <th style="width: 170px">Hodnocení</th>
+          <th>Oblast</th>
+          <th>Hodnocení</th>
           <th style="width: 120px"></th>
         </tr>
       </thead>
