Promises overview: narrower promise title column vol.2

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -107,9 +107,9 @@
       <thead>
         <tr>
           <th></th>
-          <th>Oblast</th>
-          <th>Hodnocení</th>
-          <th style="width: 120px"></th>
+          <th style="width: 19%">Oblast</th>
+          <th style="width: 26%">Hodnocení</th>
+          <th style="width: 15%"></th>
         </tr>
       </thead>
       <tbody>
