--- a/app/views/homepage/_cover_story.html.erb
+++ b/app/views/homepage/_cover_story.html.erb
@@ -1,35 +1,56 @@
 <% if @cover_story %>
   <article class="container-homepage-cover_story">
-    <h1>
-      <%= link_to(@cover_story.title, article_path(@cover_story)) %>
-    </h1>
-
     <% if @cover_story.illustration.attached? %>
-      <figure>
+      <a title="<%= @cover_story.title %>" href="<%= article_path(@cover_story) %>" class="illustration">
         <img src="<%= polymorphic_url(@cover_story.illustration, only_path: true) %>" alt="<%= @cover_story.title %>" />
-      </figure>
+      </a>
     <% end %>
 
-    <p class="perex">
-      <%= strip_tags(@cover_story.perex) %>
-      <a href="<%= article_path(@cover_story) %>">
-        Číst&nbsp;dál&nbsp;&rarr;
-      </a>
-    </p>
+    <div class="title-perex-and-speakers">
+      <h1>
+        <%= link_to(@cover_story.title, article_path(@cover_story)) %>
+      </h1>
 
-    <section class="speakers">
-      <% @cover_story.unique_speakers.each do |speaker| %>
-        <div class="speakers-item">
-          <%= render(
-            partial: "shared/speaker_stat",
-            locals: {
-              speaker: speaker,
-              stats: @cover_story.speaker_stats(speaker),
-              lazy_load_images: false
-            })
-          %>
-        </div>
-      <% end %>
-    </section>
+      <section class="article-meta">
+        <span class="label <%= @cover_story.article_type.name == "default" ? "factcheck" : "editorial" %>">
+          <% if @cover_story.article_type.name == "default" %>
+              Ověřeno
+          <% end %>
+          <% if @cover_story.article_type.name == "static" %>
+              Komentář
+          <% end %>
+        </span>
+
+        <% if @cover_story.article_type.name == "default" && @cover_story.source %>
+            <i><%= @cover_story.source.medium.name %>, <%= raw(l(@cover_story.source.released_at, format: :long, locale: :cs)) %></i>
+        <% end %>
+
+        <% if @cover_story.article_type.name == "static" %>
+          <i><%= raw(l(@cover_story.published_at, format: :long, locale: :cs)) %></i>
+        <% end %>
+      </section>
+
+      <p class="perex">
+        <%= strip_tags(@cover_story.perex) %>
+        <a href="<%= article_path(@cover_story) %>">
+          Číst&nbsp;dál&nbsp;&rarr;
+        </a>
+      </p>
+
+      <section class="speakers">
+        <% @cover_story.unique_speakers.each do |speaker| %>
+          <div class="speakers-item">
+            <%= render(
+              partial: "shared/speaker_stat",
+              locals: {
+                speaker: speaker,
+                stats: @cover_story.speaker_stats(speaker),
+                lazy_load_images: false
+              })
+            %>
+          </div>
+        <% end %>
+      </section>
+    </div>
   </article>
 <% end %>
