--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "cover_story" %>
+<%= render partial: "promises" %>
 
 <% if @interesting_statements %>
   <%= render partial: "interesting_statements" %>
