--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -15,6 +15,7 @@
 
 @import "promises/methodology";
 @import "promises/overview";
+@import "promises/promise_embed";
 
 @import "shared/nav";
 @import "shared/partners";
