--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,6 +35,7 @@
     <%= yield %>
 
     <%= javascript_pack_tag 'admin'  %>
+    <%= javascript_pack_tag 'widget'  %>
   </body>
 </html>
 </body>
