--- a/app/assets/stylesheets/promises/overview.scss
+++ b/app/assets/stylesheets/promises/overview.scss
@@ -394,6 +394,22 @@
         }
       }
 
+      .embed-button {
+        display: inline-block;
+        color: #aaa;
+        margin: 0 0 0 15px;
+        padding: 0;
+        border: none;
+        background: none;
+        font-family: var(--font-family);
+        font-size: var(--normal-typesize);
+        cursor: pointer;
+
+        &:hover, &:active {
+          text-decoration: underline;
+        }
+      }
+
       .explanation-container {
         .short-explanation {
           margin-top: 7px;
@@ -470,4 +486,67 @@
       }
     }
   }
+
+  .embed-modal {
+    display: none;
+    &.is-open { display: block; }
+
+    .embed-modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .embed-modal-container {
+      background-color: #fff;
+      padding: 20px;
+      width: 650px;
+      max-height: 100vh;
+      overflow-y: auto;
+      box-sizing: border-box;
+    }
+
+    .embed-modal-header {
+      .embed-modal-title {
+        margin: 0;
+      }
+
+      .close-button {
+        float: right;
+        border: none;
+        background: none;
+        padding: 0;
+        margin: -7px 0 0 0;
+        font-size: 34px;
+        line-height: 1;
+        cursor: pointer;
+        color: #3c325c;
+        outline: none;
+
+        &:hover, &:active {
+          color: #f26538;
+        }
+      }
+    }
+
+    .embed-modal-content {
+      .embed-code {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 5px;
+        font-size: 14px;
+      }
+
+      .embed-preview-container {
+        max-width: 600px;
+      }
+    }
+  }
+
 }
