--- a/app/assets/stylesheets/promises/promise_embed.scss
+++ b/app/assets/stylesheets/promises/promise_embed.scss
@@ -1,72 +1,60 @@
 .container-promises-promise_embed {
-  border-top: 1px solid #D7E5FB;
-  border-bottom: 1px solid #D7E5FB;
-  padding: 17px 0 5px 0;
+  blockquote {
+    border: 1px solid #D7E5FB;
+    border-radius: 5px 5px 0 0;
+    background-color: white;
+    padding: 10px 15px 15px 15px;
+    margin: 0;
 
-  > h2 {
-    margin-top: 0;
+    p {
+      margin-bottom: 7px;
+    }
+
+    cite {
+      text-align: right;
+      color: #9a91b5;
+      line-height: 1.25;
+
+      a {
+        color: #9a91b5;
+        text-decoration: underline;
+
+        &:hover {
+          color: #f26538;
+        }
+      }
+    }
   }
 
-  .content-and-assessment {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  .assessment {
+    border: 1px solid #D7E5FB;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+    background-color: #f4f9fd;
+    padding: 15px 15px 20px 15px;
+    position: relative;
 
-    blockquote.content {
-      flex: 1 1 0;
-      margin: 0 20px 20px 0;
-      box-sizing: border-box;
-
-      border: 1px solid #CAD9E6;
-      border-radius: 5px;
-      background-color: white;
-      padding: 10px 15px 15px 15px;
+    .short-explanation {
+      margin-top: 3px;
 
       p {
         margin-bottom: 7px;
       }
-
-      cite {
-        text-align: right;
-        color: #9a91b5;
-        line-height: 1.25;
-
-        a {
-          color: #9a91b5;
-          text-decoration: underline;
-
-          &:hover {
-            color: var(--orange);
-          }
-        }
-      }
     }
 
-    .assessment {
-      flex: 1 1 0;
-      margin-bottom: 20px;
-
-      .promise-evaluation {
-        margin-left: 0;
-      }
-
-      .short-explanation {
-        p {
-          margin-bottom: 5px;
-        }
-      }
+    .logo {
+      display: block;
+      position: absolute;
+      right: 15px;
+      bottom: 15px;
+      width: 110px;
     }
   }
 
-  @media (max-width: 599.9px) {
-    .content-and-assessment {
-      blockquote.content {
-        flex: 1 0 100%;
-      }
-
-      .assessment {
-        flex: 1 0 100%;
-      }
+  @media (max-width: 449.9px) {
+    .assessment .logo {
+      margin-top: 15px;
+      position: static;
     }
   }
 }
