--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -4,7 +4,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <% if content_for?(:stylesheets) %><%= yield :stylesheets %><% end %>
-    <%= render partial: "shared/meta" %>
+    <meta name="robots" content="noindex,nofollow">
   </head>
 
   <body>
