--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -27,7 +27,7 @@
       <% if segment.is_text? %>
         <%= raw(replace_segment_text_html_special_strings(segment.text_html)) %>
       <% elsif segment.is_promise? %>
-        <demagogcz-widget data-url="<%= segment.promise_url %>"></demagogcz-widget>
+        <demagogcz-widget data-url="<%= promise_segment_widget_url(segment.promise_url) %>"></demagogcz-widget>
       <% elsif segment.is_source_statements? %>
         <% if @article.segments.size === 1 %>
           <div class="statements-filters">
