Update intro to babis

--- a/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
+++ b/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
@@ -5,6 +5,27 @@
 <h1>Sliby vlády Andreje Babiše</h1>
 <p><strong>Speciální výstup Demagog.cz sledující plnění slibů druhé vlády Andreje Babiše</strong></p>
 
-<p>Sem přijde krátký úvodní text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus nibh odio, quis dapibus dolor fringilla at. Donec a ornare metus, eget condimentum neque. Sed nec enim sit amet ex bibendum rhoncus. Vivamus sit amet ornare urna, ac viverra velit. Nullam bibendum, tellus sed laoreet imperdiet, metus mauris feugiat turpis, et ornare magna nisi luctus tellus.</p>
+<p>
+  Vláda Andreje Babiše schválila své programové prohlášení již 27.&nbsp;května&nbsp;2018.
+  Necelý rok poté přichází Demagog.cz s&nbsp;rozsáhlou analýzou o&nbsp;plnění slibů menšinového
+  kabinetu hnutí ANO a&nbsp;ČSSD. Vybrali jsme padesátku slibů napříč tématy,
+  které budeme kontrolovat po celé volební období. Kompletní metodiku naleznete
+  <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-andreje-babise">zde</a>.
+  Za podporu děkujeme Nadačnímu fondu pro nezávislou žurnalistiku.
+</p>
 
-<p>Maecenas volutpat id tortor eget pharetra. Pellentesque efficitur lacus enim, et mollis odio suscipit sed. Duis lobortis lectus vitae maximus feugiat. Nunc ipsum mi, posuere ut nisi id, gravida venenatis nulla. Nam fermentum ultricies eros nec gravida. Fusce commodo arcu vulputate aliquam vehicula. Phasellus non hendrerit elit. Duis pellentesque dolor quis magna porttitor, nec hendrerit quam sodales. Nunc facilisis nisl ac urna blandit consectetur et vel magna. Sed tristique egestas massa.</p>
+<p>
+  Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované,
+  zatímco dle naší metodiky znamenají realizované snahy průběžné plnění.
+  Kategorie jsou pouze výchozím bodem pro orientaci v&nbsp;analýze.
+  Naším cílem bylo nabídnout veřejnosti tvrdá data a&nbsp;poctivou analýzu,
+  hlavním přínosem jsou tedy data a&nbsp;informace obsažené v&nbsp;odůvodnění.
+</p>
+
+<p>
+  Analýzu jsme zpracovali k 16.&nbsp;květnu&nbsp;2019, v&nbsp;pravidelných intervalech ji
+  budeme souhrnně aktualizovat. V mezidobí však může docházet ke změnám,
+  které nemusí být obratem do textu zapracovány. Berte tento limit, prosím, na vědomí.
+</p>
+
+<p>Budeme rádi za vaši zpětnou vazbu. Pište nám na <a href="mailto:info@demagog.cz">info@demagog.cz</a>.</p>
