--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -198,6 +198,13 @@
     </table>
   </section>
 
+  <section class="credits">
+    <p>Sliby vlády Andreje Babiše ověřujeme díky grantové podpoře Nadačního fondu nezávislé žurnalistiky.</p>
+    <a class="logo" title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
+      <img src="<%= asset_path("partners/nfnz.svg") %>" alt="Nadační fond nezávislé žurnalistiky" />
+    </a>
+  </section>
+
   <div class="embed-modal" id="embed-modal" aria-hidden="true" data-target="promises--embed-modal.modal">
     <div class="embed-modal-overlay" tabindex="-1" data-micromodal-close>
       <div class="embed-modal-container" role="dialog" aria-modal="true" aria-labelledby="embed-modal-title" >
