--- a/app/assets/stylesheets/promises/overview.scss
+++ b/app/assets/stylesheets/promises/overview.scss
@@ -487,6 +487,26 @@
     }
   }
 
+  .credits {
+    flex: 1 0 40%;
+    margin-top: 80px;
+    margin-bottom: 60px;
+    margin-left: 30%;
+    margin-right: 30%;
+
+    @media (max-width: 899.9px) {
+      flex: 1 0 100%;
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .logo {
+      img {
+        width: 220px;
+      }
+    }
+  }
+
   .embed-modal {
     display: none;
     &.is-open { display: block; }
