Update promises intro

--- a/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
+++ b/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
@@ -6,8 +6,8 @@
 <p><strong>Speciální výstup Demagog.cz sledující plnění slibů druhé vlády Andreje Babiše</strong></p>
 
 <p>
-  Vláda Andreje Babiše schválila své programové prohlášení již 27.&nbsp;června&nbsp;2018.
-  Necelý rok poté přichází Demagog.cz s&nbsp;rozsáhlou analýzou o&nbsp;plnění slibů menšinového
+  Vláda Andreje Babiše schválila své programové prohlášení 27.&nbsp;června&nbsp;2018.
+  Rok poté přichází Demagog.cz s&nbsp;rozsáhlou analýzou o&nbsp;plnění slibů menšinového
   kabinetu hnutí ANO a&nbsp;ČSSD. Vybrali jsme padesátku slibů napříč tématy,
   které budeme kontrolovat po celé volební období. Kompletní metodiku naleznete
   <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-andreje-babise">zde</a>.
@@ -23,8 +23,8 @@
 </p>
 
 <p>
-  Analýzu jsme zpracovali k 16.&nbsp;květnu&nbsp;2019, v&nbsp;pravidelných intervalech ji
-  budeme souhrnně aktualizovat. V mezidobí však může docházet ke změnám,
+  Analýzu jsme aktualizovali k&nbsp;25.&nbsp;červnu&nbsp;2019, v&nbsp;pravidelných intervalech ji
+  budeme souhrnně aktualizovat dále. V&nbsp;mezidobí však může docházet ke změnám,
   které nemusí být obratem do textu zapracovány. Berte tento limit, prosím, na vědomí.
 </p>
 
