--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:image_src, @slug == "druha-vlada-andreje-babise" ? asset_url("vladni-sliby-og-image.jpg") : nil) %>
+
 <article
   class="container-promises-overview"
   data-controller="promises--overview promises--embed-modal"
