--- a/app/views/article/index.html.erb
+++ b/app/views/article/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title, @article.title) %>
+<% content_for(:image_src, @article.illustration.attached? ? polymorphic_url(@article.illustration) : nil) %>
 
 <article class="detail">
   <section class="intro">
