--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -8,15 +8,13 @@
   keywords: %w[factcheck politics truth ověřování politika pravda],
   author: 'Demagog.cz',
   web_author: 'Demagog2 Dev Team — github.com/Demagog2',
-  viewport: 'width=device-width, initial-scale=1',
+  viewport: content_for?(:viewport) ? yield(:viewport) : 'width=device-width, initial-scale=1',
   'theme-color': '#f04124',
   charset: 'utf-8',
   alternate: [
     { href: rss_index_path(format: :atom), type: 'application/rss+xml', title: 'RSS' },
   ],
-  image_src: defined?(@article) ?
-      @article.illustration.attached? ? polymorphic_url(@article.illustration) : nil :
-      asset_path("apple-touch-icon.png"),
+  image_src: content_for?(:image_src) ? yield(:image_src) : asset_url("apple-touch-icon.png"),
   icon: [
     { href: asset_path('favicon.png'), sizes: '64x64', type: 'image/png' },
     { href: asset_path('apple-touch-icon.png'), rel: 'apple-touch-icon-precomposed', sizes: '114x114', type: 'image/png' },
