Better html meta for sharing, particularly on twitter

--- a/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
+++ b/app/views/promises/_druha_vlada_andreje_babise_intro.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title, "Sliby vlády Andreje Babiše") %>
+<% content_for(:description, "Speciální výstup Demagog.cz sledující plnění slibů druhé vlády Andreje Babiše") %>
 
 <img class="promises-logo" src="<%= asset_path("vladni-sliby-logo.svg") %>" alt="Logo projektu Vládní sliby">
 
