--- a/app/views/promises/_sobotkova_vlada_intro.html.erb
+++ b/app/views/promises/_sobotkova_vlada_intro.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title, "Sliby Sobotkovy vlády (2014—2017)") %>
+<% content_for(:description, "Speciální výstup Demagog.cz sledující plnění slibů vlády Bohuslava Sobotky") %>
 
 <h1>Sliby Sobotkovy vlády (2014—2017)</h1>
 <p><strong>Speciální výstup Demagog.cz sledující plnění slibů vlády Bohuslava Sobotky</strong></p>
