--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -2,9 +2,7 @@
   title: content_for?(:title) ? yield(:title) : 'Demagog.cz — Factcheck politických diskuzí',
   separator: "&mdash;".html_safe,
   reverse: true,
-  description: (defined?(@article) and @article.perex.present?) ?
-    strip_tags(@article.perex).truncate(230) :
-    'Politici operují s informacemi, které jsou zkreslené, účelově vytrhávané z původních kontextů, neúplné anebo přímo lživé. Moderátor o tom často nevědí, protože jim chybějí informace a nedokážou efektivně a jednoznačně oponovat. Projekt Demagog.cz má za cíl kontrolu těchto tvrzení.',
+  description: content_for?(:description) ? yield(:description) : 'Politici operují s informacemi, které jsou zkreslené, účelově vytrhávané z původních kontextů, neúplné anebo přímo lživé. Moderátor o tom často nevědí, protože jim chybějí informace a nedokážou efektivně a jednoznačně oponovat. Projekt Demagog.cz má za cíl kontrolu těchto tvrzení.',
   keywords: %w[factcheck politics truth ověřování politika pravda],
   author: 'Demagog.cz',
   web_author: 'Demagog2 Dev Team — github.com/Demagog2',
@@ -29,7 +27,10 @@
     author: :author
   },
   twitter: {
-    card: 'summary',
-    site: '@DemagogCZ'
+    card: 'summary_large_image',
+    site: '@DemagogCZ',
+    title: :title,
+    description: :description,
+    image: :image_src
   }
 %>
