--- a/app/views/promises/document.html.erb
+++ b/app/views/promises/document.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title, "Programové prohlášení druhé vlády Andreje Babiše") %>
+<% content_for(:description, "Sliby vlády sledované projektem Demagog.cz v kontextu celého programového prohlášení") %>
 <% content_for(:viewport, "width=980") %>
 <% content_for(:image_src, asset_url("vladni-sliby-og-image.jpg")) %>
 
