Better notifications & apollo codegen upgrade

--- a/app/views/notification_mailer/notification_email.text.erb
+++ b/app/views/notification_mailer/notification_email.text.erb
@@ -1,8 +1,8 @@
 Ahoj,
 
-<%= @notification.content %>
+<%= @notification.full_text %>
 
-<%= @notification.action_text %>:
+Na detail výroku:
 <%= url_for(:controller => '/admin/notification', :action => 'open', :id => @notification.id) %>
 
 Mrkni na to brzy, díky!
