--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, "Přehled výsledků vyhledávání pro '#{@query}'") %>
+<% content_for(:title, "Vyhledávání" + (@query.empty? ? '' : ": #{@query}")) %>
 
 <div class="container-search-index">
   <%= form_tag search_path, method: :get, class: "search-box" do %>
@@ -26,7 +26,7 @@
 
     <% unless @articles.empty? %>
       <section class="s-section-articles">
-        <h3 class="section-title">Nalezené články</h3>
+        <h3 class="section-title">Nalezené výstupy</h3>
 
         <%= render_records(:articles, @articles.records.first(2).to_a) %>
 
